chore: align mysql driver and jdk17 idioms